Add spec, tests, implementation for HeapFile